Refactor environment variable usage and remove dotenv dependency

--- a/.env
+++ b/.env
@@ -1,10 +1,8 @@
 VITE_EMAILJS_SERVICE_ID=service_ilzhaeq
 VITE_EMAILJS_TEMPLATE_ID=template_szxkj6d
 VITE_EMAILJS_PUBLIC_KEY=dwbAAVnMs5bbgO4nq
-VITE_EMAILJS_SENDER_EMAIL=ashervan97@gmail.com  # Replace with a verified sender email
+VITE_EMAILJS_SENDER_EMAIL=ashervan97@gmail.com  
 VITE_EMAILJS_SUBJECT="Important Message from MartPal"
-
 VITE_ULTRAMSG_INSTANCE_ID=instance106605
 VITE_ULTRAMSG_TOKEN=8hmaed0k3ehrcww2
 VITE_ULTRAMSG_API_URL=https://api.ultramsg.com
-
