Update environment variable prefixes to use REACT_APP and enhance template loading functionality

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-VITE_EMAILJS_SERVICE_ID=service_ilzhaeq
-VITE_EMAILJS_TEMPLATE_ID=template_szxkj6d
-VITE_EMAILJS_PUBLIC_KEY=dwbAAVnMs5bbgO4nq
-VITE_EMAILJS_SENDER_EMAIL=ashervan97@gmail.com  
-VITE_EMAILJS_SUBJECT="Important Message from MartPal"
-VITE_ULTRAMSG_INSTANCE_ID=instance106605
-VITE_ULTRAMSG_TOKEN=8hmaed0k3ehrcww2
-VITE_ULTRAMSG_API_URL=https://api.ultramsg.com
+REACT_APP_EMAILJS_SERVICE_ID=service_ilzhaeq
+REACT_APP_EMAILJS_TEMPLATE_ID=template_szxkj6d
+REACT_APP_EMAILJS_PUBLIC_KEY=dwbAAVnMs5bbgO4nq
+REACT_APP_EMAILJS_SENDER_EMAIL=ashervan97@gmail.com  
+REACT_APP_EMAILJS_SUBJECT="Important Message from MartPal"
+
+REACT_APP_ULTRAMSG_INSTANCE_ID=instance106605
+REACT_APP_ULTRAMSG_TOKEN=8hmaed0k3ehrcww2
+REACT_APP_ULTRAMSG_API_URL=https://api.ultramsg.com
