--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "martpal",
   "version": "0.1.0",
+  "homepage": "https://iamprincecee.github.io/martpal",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -19,6 +20,8 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,6 +48,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "eslint-plugin-react": "^7.37.4",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.0",
     "tailwindcss": "^3.4.17"
   }
